k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: tasks-app
  labels:
    app.kubernetes.io/name: tasks
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tasks
    app.kubernetes.io/component: database
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
